# ioddengine

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
catalog/: Cargo.toml  README.md
catalog/src/: lib.rs
catalog/src/downloader/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/functions/: menu.rs  mod.rs  parameter.rs  parse.rs  variable.rs
data/: 05D.xml  AL009.xml  LMT121.xml  LR3300.xml  PN7592.xml  SD1540.xml  SI5010.xml  TN2405.xml  VVB001.xml
data/Examples/: IO-Link-01-BasicDevice-20211215-IODD1.1.xml  IO-Link-02-DeviceVariants-20211215-IODD1.1.xml  IO-Link-03-InternalLangDevice-20211215-IODD1.1.xml  IO-Link-04-ExternalLangDevice-20211215-IODD1.1.xml  IO-Link-05-CommCharacteristicsDevice-20211215-IODD1.1.xml  IO-Link-06-EventDevice-20211215-IODD1.1.xml  IO-Link-07-ErrorDevice-20211215-IODD1.1.xml  IO-Link-08-ConnectionVariants-20211215-IODD1.1.xml  IO-Link-09-AllSimpleDatatypesDevice-20211215-IODD1.1.xml  IO-Link-10-AllComplexDatatypesDevice-20211215-IODD1.1.xml  IO-Link-11-DatatypeSimpleDtDevice-20211215-IODD1.1.xml  IO-Link-12-DatatypeComplexDtDevice-20211215-IODD1.1.xml  IO-Link-13-DeviceAccessLocksDevice-20211215-IODD1.1.xml  IO-Link-14-SysCommandDevice-20211215-IODD1.1.xml  IO-Link-15-VariableAttributeDevice-20211215-IODD1.1.xml  IO-Link-16-SimpleProcessDataDevice-20211215-IODD1.1.xml  IO-Link-17-ComplexProcessDataDevice-20211215-IODD1.1.xml  IO-Link-20-HierarchicalMenuDevice-20211215-IODD1.1.xml  IO-Link-21-ConditionalMenuDevice-20211215-IODD1.1.xml  IO-Link-22-ConditionalProcessDataDevice-20211215-IODD1.1.xml
data/db/: iodd11.kv
data/specs/: IODD-StandardDefinitions1.1-de.xml  IODD-StandardDefinitions1.1-es.xml  IODD-StandardDefinitions1.1-fr.xml  IODD-StandardDefinitions1.1-it.xml  IODD-StandardDefinitions1.1-ja.xml  IODD-StandardDefinitions1.1-ko.xml  IODD-StandardDefinitions1.1-pt.xml  IODD-StandardDefinitions1.1-ru.xml  IODD-StandardDefinitions1.1-zh.xml  IODD-StandardDefinitions1.1.xml  IODD-StandardUnitDefinitions1.1.xml
ioddcli/: Cargo.toml  Makefile  README.md
ioddcli/src/: main.rs
ioddcli/src/functions/: eval.rs  menu.rs  parameter.rs  parse.rs  variable.rs
ioddcli/tests/: devicetest.rs
ioddengine/: Cargo.toml  Makefile  README.md
ioddengine/benches/: commonbenchmark.rs
ioddengine/src/: catalog.rs  engine.rs  lib.rs  parser.rs
ioddengine/src/ioddmodel11/: CommNetworkProfile.rs  DocumentInfo.rs  ExternalTextCollection.rs  IODevice.rs  ProfileHeader.rs  mod.rs
ioddengine/src/ioddmodel11/ProfileBody/: DeviceFunction.rs  DeviceIdentity.rs  MenuCollection.rs  ProcessDataCollection.rs  RecordItem.rs  VariableCollection.rs  common.rs  mod.rs
ioddengine/src/standards/: definitions.rs  mod.rs  units.rs
ioddengine/src/utils/: decoder.rs  encoder.rs  format.rs  math.rs  mod.rs
ioddengine/src/utils/tests/: mod.rs
ioddengine/tests/: parsetest.rs  test_devices.rs
iotcoreconnect/: Cargo.toml  Makefile
iotcoreconnect/src/: errors.rs  iotcoreclient.rs  lib.rs  utils.rs
wasm/: Cargo.toml  Makefile  index.html  wasmserver.py
wasm/src/: lib.rs
