[package]
name = "catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
flate2 = "1.0"
memmap = "0.7"
tempfile = "3.9.0"
regex = "1.10.3"


reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
microkv = "0.2.9"
log = "0.4.21"
