[package]
name = "cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/uneidel/iodd"

description = """
Provides command line interface for iodd engine
"""
[[bin]]
name = "cli"
path = "src/main.rs"


[dependencies]

clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.2"
ioddengine = { version = "0.1.0", path = "../ioddengine" }
iotcoreconnect = { version = "0.1.0", path = "../iotcoreconnect" }
tokio = { version = "1.36.0", features = ["full"] }


