[package]
name = "iotcoreconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
reqwest = { version = "0.11.23" }
log = "0.4.21"


[lib]
[target.'cfg(target_arch = "wasm32")']
crate-type = ["cdylib"]
